--- a/src/w4/assignment/w4-assignment.html
+++ b/src/w4/assignment/w4-assignment.html
@@ -68,7 +68,7 @@
        </div>
       </p>
       <img
-        src="../../assets/pasta-carbonara.jpg"
+        src="../../../assets/pasta-carbonara.jpg"
         alt="흰 접시 위에 담긴 카르보나라 파스타 관찰레가 같이 버무려져있다"
         style="padding-inline: 36px; padding-top: 24px; padding-bottom: 8px"
       />
