--- a/src/w4/assignment/w4-assignment.html
+++ b/src/w4/assignment/w4-assignment.html
@@ -13,7 +13,7 @@
       *,
       *::before,
       *::after {
-        box-sizing: border-box;
+        box-sizing: border-box; 
         font-family: "Spoqa Han Sans Neo", "sans-serif";
         margin: 0;
         padding: 0;
@@ -26,6 +26,9 @@
       .container {
         max-width: 64rem;
         background-color: #f1eee8;
+
+        margin-inline: auto;
+        padding: 2rem;
       }
 
       img {
@@ -37,22 +40,43 @@
         padding: 1rem;
         border-radius: 8px;
       }
+      h2{
+        font-size: 2.1875rem;
+        font-weight: 700;
+        line-height: 150%;
+        margin-top: 3rem;
+      }
+      h3{
+        font-size: 1.4315rem;
+        font-weight: 700;
+        line-height: 150%;
+      }
+
+    
+
+      p{
+        margin-bottom: 0.5rem;
+      }
+
+      .section{
+
+      }
     </style>
   </head>
   <body>
     <div class="container">
       <h1>
-        <div style="font-style: normal; font-size: 69px;padding-inline: 32px; padding-top: 32px">
+        <div style="font-style: normal; font-size: 69px; padding-top: 32px">
         파스타 카르보나라
         </div>
       </h1>
       <p>
-        <div style="padding-inline: 32px; padding-top: 8px; font-size: 18px">
+        <div style="padding-top: 8px; font-size: 18px">
           <strong>CLAIRE SAFFITZ</strong>
          </div>
       </p>
       <p>
-        <div style="font-style: normal; padding-inline: 32px; padding-block: 8px"
+        <div style="font-style: normal; padding-block: 8px"
           ><strong>레서피</strong>
         </div>
       </p>
@@ -60,33 +84,27 @@
         <div
           style="
             font-style: normal;
-            padding-left: 32px;
-
             padding-bottom: 24px;
             font-size: 14px;
           " >2023.01.04
        </div>
       </p>
-      <img
+      <figure>
+       <img
         src="../../../assets/pasta-carbonara.jpg"
         alt="흰 접시 위에 담긴 카르보나라 파스타 관찰레가 같이 버무려져있다"
-        style="padding-inline: 36px; padding-top: 24px; padding-bottom: 8px"
-      />
+        style="padding-bottom: 1.5rem;"/>
+       <figcaption> 사진: Chelsie Craig, 스타일링: Molly Baz</figcaption>
+      </figure>
       <p>
-        <em style="font-size: 14px; font-weight: 400;
-        font-style: normal; padding-left: 32px">
-          사진: Chelsie Craig, 스타일링: Molly Baz
-        </em>
-      </p>
-      <p>
-        <div style="padding-inline: 32px; padding-top: 24px; 
+        <div style="padding-top: 24px; 
         padding-bottom: 16px; font-size: 18px; font-weight: 500">
           <strong>
           총 소요 시간 24분</strong>
         </div></p>
       <p>
         <div style=
-         "font-size: 18px; padding-left: 32px; font-style:  normal;padding-bottom:8px">
+         "font-size: 18px; font-style:  normal;padding-bottom:8px">
           육즙이 풍부한 바삭한 돼지고기, 후추 맛이 가득하고 계란으로 풍성한 벨벳
          같은 치즈 소스를 가진 카르보나라는 밤새 놀고 들어온 새벽 2시도 만들 수
          있을 만큼 정말 쉽습니다. 카르보나라는 로마의 대표적인 요리 중 하나이며,
@@ -102,7 +120,7 @@
       </p>
       <p>
         <div style=
-        "font-size: 18px; padding-left: 32px; font-style:  normal;padding-bottom:8px">
+        "font-size: 18px; font-style:  normal;padding-bottom:8px">
             기술에 대해 한 마디: 어떤 카르보나라 레시피던지 크리미한 소스 특유의
            윤기나는 광택을 얻기 위해서는 정확한 시간과 온도에 재료를 첨가하는 것이
            중요합니다. 면수를 ¼컵씩 계란 믹스에 섞고, 파스타에 추가하기 전에 불을
@@ -113,7 +131,7 @@
       </p>
       <p>
         <div style=
-        "font-size: 18px; padding-left: 32px; font-style:  normal;padding-bottom:24px">
+        "font-size: 18px; font-style:  normal;padding-bottom:24px">
         저녁 식사 때는 이 파스타 요리를 샐러드와 함께 제공하는 것이 좋지만, 밤새
         놀고 난 뒤라면 그저 포크를 집어 파스타만 먹어도 됩니다.
         </div>
@@ -127,16 +145,16 @@
         </div>
       </p>
       <h2>
-        <div style="padding-inline: 32px; padding-top: 48px; 
+        <div style="padding-top: 48px; 
         padding-bottom: 12px; font-size: 35px">재료
         </div>
       </h2>
       <p>
-        <div style="padding-inline: 32px;  
-        padding-bottom: 12px; font-size: 14px">4인분기준
+        <div style=" padding-bottom: 12px; font-size: 14px">
+          4인분기준
         </div></p>
         <table>
-          <table style="padding-inline: 32px; font-size: 18px">
+          <table style="font-size: 18px">
            <tr>
             <td>수량</td>
             <td>단위</td>
@@ -187,18 +205,16 @@
         </table style>
         </table>
       <h2>
-        <div style="padding-inline: 32px; padding-top: 48px; 
+        <div style=" padding-top: 48px; 
         padding-bottom: 12px; font-size: 35px">준비
         </div>
       </h2>
       <h3>
-        <div style="padding-inline: 32px;
-        padding-bottom: 8px; font-size: 23px">단계 1
+        <div style="padding-bottom: 8px; font-size: 23px">단계 1
         </div>
       </h3>
       <p>
-        <div style="padding-inline: 32px; 
-        padding-bottom: 20px; font-size: 18px">
+        <div style="padding-bottom: 20px; font-size: 18px">
         큰 냄비에 5.5qt.의 물을 센 불로 가열하세요. 김이 올라오기 시작하면 소금 3큰술
         을 넣고 뚜껑을 덮어주세요 (이렇게 하면 물이 빨리 끓습니다).
       </p>
