--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <ol>
       <li><a href="./src/w2/index.html">2주차</a></li>
       <li><a href="./src/w3/index.html">3주차</a></li>
-      <li><a href="./src/w4/index.html">4주차</a></li>
+      <li><a href="./src/w4/w4.html">4주차</a></li>
       <li><a href="./src/w4/w4-2.html">4주차 두번째</a></li>
       <li><a href="./src/w4/assignment/w4-assignment.html">4주차 과제</a></li>
       <li><a href="./src/w5/index.html">5주차</a></li>
+      <li><a href="./src/w6/card.html">6주차</a></li>
+      <li><a href="./src/flex basic/flexbasic.html">flex basic</a></li>
     </ol>
   </body>
 </html>
