--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="./src/w5/index.html">5주차</a></li>
       <li><a href="./src/w6/card.html">6주차</a></li>
       <li><a href="./src/flex basic/flexbasic.html">flex basic</a></li>
+      <li><a href="./src/w7/stp1.html/stp1.html">7주차</a></li>
     </ol>
   </body>
 </html>
