--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="./src/w6/card.html">6주차</a></li>
       <li><a href="./src/flex basic/flexbasic.html">flex basic</a></li>
       <li><a href="./src/w7/stp1.html/stp1.html">7주차</a></li>
+      <li><a href="./src/w7/assignment/index.html">7주차 과제</a></li>
     </ol>
   </body>
 </html>
