--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="./src/flex basic/flexbasic.html">flex basic</a></li>
       <li><a href="./src/w7/stp1.html/stp1.html">7주차</a></li>
       <li><a href="./src/w7/assignment/index.html">7주차 과제</a></li>
+      <li><a href="./src/w8/index.html">8주차</a></li>
     </ol>
   </body>
 </html>
