--- a/src/w10/assignment/index.html
+++ b/src/w10/assignment/index.html
@@ -165,7 +165,7 @@
                 alt="The Accessible Publishing Learning Network"
               />
               <p class="resources">Resources</p>
-              <h4 class="text">The APLN<br />(Accessible Publishing...)</h4>
+              <h4 class="text">The APLN<br />(Accessible Publishing...</h4>
             </div>
             <div class="card">
               <img
