--- a/index.html
+++ b/index.html
@@ -3,25 +3,100 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WMD241-문예현-202020475</title>
+    <title>my project</title>
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <h1>WMD241-문예현-202020475</h1>
-    <ol>
-      <li><a href="./src/w2/index.html">2주차</a></li>
-      <li><a href="./src/w3/index.html">3주차</a></li>
-      <li><a href="./src/w4/w4.html">4주차</a></li>
-      <li><a href="./src/w4/w4-2.html">4주차 두번째</a></li>
-      <li><a href="./src/w4/assignment/w4-assignment.html">4주차 과제</a></li>
-      <li><a href="./src/w5/index.html">5주차</a></li>
-      <li><a href="./src/w6/card.html">6주차</a></li>
-      <li><a href="./src/flex basic/flexbasic.html">flex basic</a></li>
-      <li><a href="./src/w7/stp1.html/stp1.html">7주차</a></li>
-      <li><a href="./src/w7/assignment/index.html">7주차 과제</a></li>
-      <li><a href="./src/w8/index.html">8주차</a></li>
-      <li><a href="./src/w9/index.html">9주차</a></li>
-      <li><a href="./src/w10/index.html">10주차</a></li>
-      <li><a href="./src/w10/assignment/index.html">10주차 과제</a></li>
+    <div class="fixed fixed--pos-tl fixed--role-logo">YEHYUN MOON</div>
+    <a class="fixed fixed--pos-tr fixed--role-contact" href="#"
+      >linamoon01@naver.com</a
+    >
+    <ol class="fixed fixed--pos-br fixed--role-list">
+      <li><a href="#issue-1">About</a></li>
+      <li><a href="#issue-2">Poster Design</a></li>
+      <li><a href="#issue-3">Package Design</a></li>
+      <li><a href="#issue-4">Product Design</a></li>
+      <li><a href="#issue-5">Space Design</a></li>
+      <li><a href="#issue-6">3D Graphic Design </a></li>
+      <li><a href="#issue-7">illustration</a></li>
     </ol>
+
+    <div class="fixed fixed--pos-bl fixed--role-about">
+      <p class="fixed__desc">
+        Hello, this is designer Yehyun Moon's portfolio site.
+      </p>
+      <p class="fixed__copyright">
+        © 2024 <a href="#">Published by Yehyun Moon</a>
+      </p>
+    </div>
+    <div class="wrapper">
+      <div id="issue-1" class="issue issue--n0-1">
+        <img src="./assets/bts0.webp" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title"></p>
+          <p class="issue__link"></p>
+        </div>
+      </div>
+      <div id="issue-2" class="issue issue--n0-2">
+        <img src="./assets/bts1.webp" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">Poster Design</p>
+          <p class="issue__link">
+            A poster that expresses the feelings of 'happiness.'
+          </p>
+        </div>
+      </div>
+      <div id="issue-3" class="issue issue--n0-3">
+        <img src="./assets/bts2.webp" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">Package Design</p>
+          <p class="issue__link">
+            Christmas Package Design for 'Elegant Table'
+          </p>
+        </div>
+      </div>
+      <div id="issue-4" class="issue issue--n0-4">
+        <img src="./assets/bts5.webp" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">Product Design</p>
+          <p class="issue__link">
+            Coca-Cola bottle design that reflects feelings of pleasure.
+          </p>
+        </div>
+      </div>
+      <div id="issue-5" class="issue issue--n0-5">
+        <img src="./assets/bts.webp" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">Space Design</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+      <div id="issue-6" class="issue issue--n0-6">
+        <img src="./assets/bts4.webp" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">3D Graphic Design</p>
+          <p class="issue__link">3D graphic design expressing 'Soft'</p>
+        </div>
+      </div>
+      <div id="issue-7" class="issue issue--n0-7">
+        <img src="./assets/bts6.webp" alt="" class="issue__img" />
+        <div class="issue__text">
+          <p class="issue__title">illustration</p>
+          <p class="issue__link">buy here</p>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <a class="footer__contact" href="#">linamoon01@naver.com</a>
+
+      <div class="footer__about">
+        <p class="fixed__desc">
+          Hello, this is designer Yehyun Moon's portfolio site.
+        </p>
+        <p class="fixed__copyright">
+          © 2024 <a href="#">Published by Yehyun Moon</a>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
