--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="#issue-4">Product Design</a></li>
       <li><a href="#issue-5">Space Design</a></li>
       <li><a href="#issue-6">3D Graphic Design </a></li>
-      <li><a href="#issue-7">illustration</a></li>
+      <li><a href="#issue-7">Illustration</a></li>
     </ol>
 
     <div class="fixed fixed--pos-bl fixed--role-about">
@@ -65,10 +65,10 @@
         </div>
       </div>
       <div id="issue-5" class="issue issue--n0-5">
-        <img src="./assets/bts.webp" alt="" class="issue__img" />
+        <img src="./assets/bts8.webp" alt="" class="issue__img" />
         <div class="issue__text">
           <p class="issue__title">Space Design</p>
-          <p class="issue__link">buy here</p>
+          <p class="issue__link">Coca-Cola Pop-up Store Design</p>
         </div>
       </div>
       <div id="issue-6" class="issue issue--n0-6">
@@ -79,10 +79,11 @@
         </div>
       </div>
       <div id="issue-7" class="issue issue--n0-7">
-        <img src="./assets/bts6.webp" alt="" class="issue__img" />
+        <img src="./assets/bts7.webp" alt="" class="issue__img" />
         <div class="issue__text">
-          <p class="issue__title">illustration</p>
-          <p class="issue__link">buy here</p>
+          <p class="issue__title">Illustration</p>
+          <p class="issue__link">It is a work that represents important moments and experiences in a
+            person's life.</p>
         </div>
       </div>
     </div>
